Clean up warnings from IntelliJ